updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a mother to a 5 year old as well as a Licensed Massage Therapist.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Columbus, OH</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Reading, dancing, and exploring the world with my daughter.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>One that allows me to provide for my family while also keeping my interest.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Columbus, OH</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>A few friends got me interested in coding and it seemed like a great skill to learn. It also challenges my brain.</p>
     </section>
 
     <footer id="footer">
